fixed navbar issue and fixed info cards sizing on small screens

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -288,11 +288,11 @@
     line-height: 1;
   }
   .team__section .photo img {
-    width: 220px;
+    width: 100%;
     height: 220px;
   }
   .team__section .teamCards__container {
-    height: 470px;
-    width: 250px;
+    height: fit-content;
+    width: 95%;
   }
 }
